<resources>
    <string name="app_name">Libraro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="libraro">Libraro</string>
    <string name="create_an_account">Create an Account</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="header_image">header image</string>
    <string name="sign_in_button">sign in button</string>
    <string name="sign_in">Sign in</string>
    <string name="create_an_account_home">Create an Account</string>
    <string name="header_image_sign_in_page">header image sign in page</string>
    <string name="welcome">Welcome Back</string>
    <string name="login">Login in to your account</string>
    <string name="email_address">    Email Address</string>
    <string name="password_hint">••••••••••••</string>
    <string name="privacy_policy">by continuing you confirm that you \nagree to the term of use and the \nprivacy policy.</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_up">Sign up</string>
    <string name="haveAccount">Don\'t have an account?</string>
    <string name="back_to_account_page">back to account page</string>
    <string name="alreadyHaveAccount">Already have an account?</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="example_mail">example@mail.com</string>
    <string name="full_name">Full name</string>
    <string name="ya_hoo">Ya hoo</string>
    <string name="msgLoginFailed">Login failed, please make sure you have entered the correct details</string>
    <string name="msgNotMatching">Passwords are not matching</string>
    <string name="msgEmptyNotAccepted">Empty fields are not accepted!</string>
    <string name="settings">Settings</string>
    <string name="done">done</string>
    <string name="search">click to search</string>
    <string name="display_menu">click to display menu</string>
    <string name="home">Home</string>
    <string name="drop_down_menu">drop down menu</string>
    <string name="now_reading">Now reading</string>
    <string name="wishlist">Wishlist</string>
    <string name="favourite">Favourite</string>
    <string name="categories">Categories</string>
    <string name="analytics">Analytics</string>
    <string name="pdf_upload">PDF Upload</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="drawer_open">open drawer\n</string>
    <string name="drawer_close">close drawer</string>
    <string name="user_s_profile_picture">user\'s profile picture</string>
    <string name="email">contact.namso@gmail.com</string>
    <string name="sample_name">John</string>
    <string name="sample_surname">Doe</string>
    <string name="book_item">book item</string>
    <string name="book_title_sample">Book Title</string>
    <string name="nonsense">Data to be displayed</string>
    <string name="too_bad">Too Bad!</string>
    <string name="latest_uploads">Latest Uploads</string>
    <string name="sample_book_name">Book Name</string>
    <string name="sample_author">Author</string>
    <string name="read_now">Read Now</string>
    <string name="sample_rating">5.0</string>
    <string name="rating_stars">rating stars</string>
    <string name="book_cover_image">book cover image</string>
    <string name="book_description">Book Description</string>
    <string name="price_sample">price £0</string>
    <string name="read_more">Read More</string>
    <string name="about_this_book">About This Book</string>
    <string name="_148">148</string>
    <string name="background">background</string>
    <string name="number_of_pages">number of pages</string>
    <string name="reading_hours">reading hours</string>
    <string name="number_of_words">number of words</string>
    <string name="sample_number">12</string>
    <string name="sample_no_words">129k</string>
    <string name="pages">Pages</string>
    <string name="words">Words</string>
    <string name="reading_hour">Reading Hours</string>
    <string name="reviews">Reviews</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="add_to_now_reading">Add to Now Reading</string>
    <string name="crime_and_thriller">Crime and Thriller</string>
    <string name="all_categories">All Categories</string>
    <string name="hala_hala">Hala Hala</string>
    <string name="name_sample">Osman Salama</string>
    <string name="review_sample">a very bad book I dont recommend it to anyone</string>
    <string name="review_hint">write a review</string>
</resources>