<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:gravity="bottom"
    android:padding="16dp"
    android:background="@drawable/very_new_header"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/user_s_profile_picture"
        android:src="@drawable/my_logo" />

    <TextView
        android:id="@+id/nav_header_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/nav_header_email"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginBottom="40dp"/>
</LinearLayout>