<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".fragments.SignInFragment">


    <TextView
        android:id="@+id/textViewHeaderLibraro"
        android:layout_width="282dp"
        android:layout_height="44dp"
        android:src="@drawable/header_sign_in"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/gruvbox_dark"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <TextView
        android:id="@+id/textviewSignIn"
        android:layout_width="259dp"
        android:layout_height="43dp"
        android:layout_marginBottom="576dp"
        android:fontFamily="@font/italiana"
        android:src="@drawable/header_sign_in"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/gruvbox_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderLibraro"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edit_text"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gruvbox_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.647"
        tools:ignore="RtlSymmetry">

    </EditText>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edit_text"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gruvbox_dark"
        android:textSize="15sp"
        app:cornerRadius="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.566"
        tools:ignore="RtlSymmetry">

    </EditText>

    <TextView
        android:id="@+id/textViewForgetPassword"
        android:layout_width="107dp"
        android:layout_height="21dp"
        android:text="@string/forget_password"
        android:textColor="@color/gruvbox_dark"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_SignIn"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/gruvbox_dark"
        android:contentDescription="@string/sign_in_button"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/sign_up"
        android:textColor="@color/gruvbox_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/haveAccount"
        android:textColor="@color/btn_light_gruvbox_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#D3504945"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/textViewMessages"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:text=""
        android:textColor="@color/red"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="399dp"
        android:layout_height="268dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/header_image"
        android:scaleType="fitXY"
        android:src="@drawable/image_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:contentDescription="@string/back_to_account_page"
        android:src="@drawable/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

</androidx.constraintlayout.widget.ConstraintLayout>