<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".fragments.SignUpFragment">


    <TextView
        android:id="@+id/textViewHeaderLibraro"
        android:layout_width="255dp"
        android:layout_height="61dp"
        android:fontFamily="@font/italiana"
        android:text="@string/libraro"
        android:textAlignment="center"
        android:textColor="@color/gruvbox_dark"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <TextView
        android:id="@+id/textviewSignIn"
        android:layout_width="332dp"
        android:layout_height="44dp"
        android:layout_marginBottom="576dp"
        android:fontFamily="@font/italiana"
        android:src="@drawable/header_sign_in"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textColor="@color/gruvbox_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderLibraro"
        app:layout_constraintVertical_bias="0.158" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:autofillHints="emailAddress"
        android:background="#40282828"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/example_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gruvbox_dark"
        android:textSize="15sp"
        app:cornerRadius="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436"
        tools:ignore="RtlSymmetry">

    </EditText>

    <CheckBox
        android:id="@+id/checkBoxRememberMe"
        android:layout_width="140dp"
        android:layout_height="51dp"
        android:text="@string/remember_me"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:autofillHints="password"
        android:background="#41282828"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gruvbox_dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517"
        tools:ignore="RtlSymmetry">

    </EditText>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:autofillHints="password"
        android:background="#41282828"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gruvbox_dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602"
        tools:ignore="RtlSymmetry">

    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:text="@string/privacy_policy"
        android:textColor="@color/btn_light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808" />

    <TextView
        android:id="@+id/textViewHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alreadyHaveAccount"
        android:textColor="@color/btn_light_gruvbox_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/gruvbox_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_SignUp"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/gruvbox_dark"
        android:contentDescription="@string/sign_up"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881">

    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/textViewMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:contentDescription="@string/back_to_account_page"
        android:src="@drawable/back_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718" />
</androidx.constraintlayout.widget.ConstraintLayout>